standardize various html files

--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -191,7 +191,7 @@
 									
 									<li>What are the aesthetic and political advantages of this monologue? What are the limits? How, for example, do abolitionist monologues such as Cowper’s reinscribe or depart from what Hartman calls “the spectacular nature of black suffering” (22)?</li>
 									
-									<li>Why did Thomas Pringle, the editor of Mary Prince’s autobiography, insert Cowper’s monologue into Prince’s book? Why did illustrators design certain depictions to accompany Cowper’s monologue on posters and other visual materials? What do the images emphasize? And, conversely, what do they overlook? (Secondary materials from The British Library and the NYPL, as well as Hack’s article, will be especially helpful here.)</li>
+									<li>Why did Thomas Pringle, the editor of Mary Prince’s autobiography, insert Cowper’s monologue into Prince’s book? Why did illustrators design certain depictions to accompany Cowper’s monologue on posters and other visual materials? What do the images emphasize? And, conversely, what do they overlook? (Secondary materials from The British Library and the NYPL as well as Hack’s article will be especially helpful here.)</li>
 								</ul>
 							</section>
 							<hr/>
