--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -126,7 +126,7 @@
             </section>
 
             <aside class="breakout-quote">
-              <p>“Of course, had it not been for my old strong-mindedness . . . I should have given up the scheme a score of times in as many days; so regularly did each successive day give birth to a fresh set of rebuffs and disappointments. I shall make no excuse to my readers for giving them a pretty full history of my struggles to become a Crimean <em>heroine</em>!”</p>
+              <p>“Of course, had it not been for my old strong-mindedness [...] I should have given up the scheme a score of times in as many days; so regularly did each successive day give birth to a fresh set of rebuffs and disappointments. I shall make no excuse to my readers for giving them a pretty full history of my struggles to become a Crimean <em>heroine</em>!”</p>
 
               <p class="right">— Mary Seacole <br/><em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> (1857), Chap. VIII</p>
             </aside>		
