--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -130,7 +130,7 @@
 					<section aria-labelledby="series">
 						<h3 id="series">Recontextualizing the Victorians Series</h3>
 
-						<p>This cluster of syllabi demonstrates the value of recontextualizing the Victorians by drawing out the forgotten and oftentimes suppressed connections between the past and the present, as well as among nineteenth-century cultures and communities. Through concepts and frameworks from Critical Race Theory, Black Studies, Postcolonial Studies, and Indigenous Studies, these syllabi disrupt the geographic and temporal boundaries of Victorian Studies, remaking the field in the process for our students and ourselves.</p>
+						<p>This cluster of syllabi demonstrates the value of recontextualizing the Victorians by drawing out the forgotten and oftentimes suppressed connections between the past and the present as well as among nineteenth-century cultures and communities. Through concepts and frameworks from Critical Race Theory, Black Studies, Postcolonial Studies, and Indigenous Studies, these syllabi disrupt the geographic and temporal boundaries of Victorian Studies, remaking the field in the process for our students and ourselves.</p>
 					</section>
 
 					<section aria-labelledby="biography">
