--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -105,7 +105,7 @@
 							<p>African Civilization Society. <a href="https://www.blackpast.org/african-american-history/constitution-african-civilization-society-1796/"><em>(1858)  Constitution of the African Civilization Society</em></a>. Blackpast, 2009.<br/>
 								<span class="annotation">The African Civilization Society was founded by Henry Highland Garnet, an American abolitionist, minister, and former enslaved person, who encouraged Black Americans to emigrate to Africa.</span></p>
 
-							<p>Booth, Joseph. <a href="http://babel.hathitrust.org/cgi/pt?id=ien.35556012349940&view=1up&seq=3"><em>Africa for the African</em></a>. N.p., 1897.<br/>
+							<p>Booth, Joseph. <a href="http://babel.hathitrust.org/cgi/pt?id=ien.35556012349940&view=1up&seq=3"><em>Africa for the African</em></a>. n.p., 1897.<br/>
 								<span class="annotation">A white English missionary who spent significant time in New Zealand, Australia, and Africa (and also traveled to the United States), Booth supported African self-rule and urged Black Americans to help bring that about. He directly influenced  John Chilembwe, who organized, and died in, a 1915 rebellion against British colonial rule in Nyasaland (modern-day Malawi).</span></p>
 								
 							<p>Turner, Henry McNeal. “Emigration.” 1 Apr. 1900. <em>Black Nationalism in America</em>, edited by John H. Bracey et al., Bobbs-Merrill, 1970, p. 176.<br/>
