--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -236,7 +236,7 @@
               
               <p>Punch Magazine. (1856) n.d. “<a href="https://www.victorianlondon.org/people/seacole.htm">A Stir for Seacole</a>.” In <em>The Dictionary of Victorian London</em>.</p>
 
-              <p>Reading, Anne. 2006. <em>The Journal of Anne Reading: From Florence Nightingale to Dorothea Dix and Beyond</em>. Edited by Margaret Garrett Irwin. n.p: Trafford Publishing.</p>
+              <p>Reading, Anne. 2006. <em>The Journal of Anne Reading: From Florence Nightingale to Dorothea Dix and Beyond</em>. Edited by Margaret Garrett Irwin. n.p.: Trafford Publishing.</p>
               
               <p>Schultz, Jane E. 2004. <em>Women at the Front: Hospital Workers in Civil War America</em>. Chapel Hill, NC: University of North Carolina Press.</p>              
             </section>
