--- a/0_dev/page-templates/0_lesson-plan-template-caribbean.html
+++ b/0_dev/page-templates/0_lesson-plan-template-caribbean.html
@@ -54,7 +54,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan"></h2><!-- Change -->
-          	<img loading="" src="/img/lesson_plans/uvc_000X-1800px.jpg" srcset="/img/lesson_plans/uvc_000X-1800px.jpg 1800w, /img/lesson_plans/uvc_000X-1650px.jpg 1650w, /img/lesson_plans/uvc_000X-1500px.jpg 1500w, /img/lesson_plans/uvc_000X-1350px.jpg 1350w, /img/lesson_plans/uvc_000X-1200px.jpg 1200w, /img/lesson_plans/uvc_000X-1050px.jpg 1050w, /img/lesson_plans/uvc_000X-900px.jpg 900w, /img/lesson_plans/uvc_000X-750px.jpg 750w, /img/lesson_plans/uvc_000X-600px.jpg 600w, /img/lesson_plans/uvc_000X-450px.jpg 450w, /img/lesson_plans/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+          	<img src="/img/lesson_plans/uvc_000X-1800px.jpg" srcset="/img/lesson_plans/uvc_000X-1800px.jpg 1800w, /img/lesson_plans/uvc_000X-1650px.jpg 1650w, /img/lesson_plans/uvc_000X-1500px.jpg 1500w, /img/lesson_plans/uvc_000X-1350px.jpg 1350w, /img/lesson_plans/uvc_000X-1200px.jpg 1200w, /img/lesson_plans/uvc_000X-1050px.jpg 1050w, /img/lesson_plans/uvc_000X-900px.jpg 900w, /img/lesson_plans/uvc_000X-750px.jpg 750w, /img/lesson_plans/uvc_000X-600px.jpg 600w, /img/lesson_plans/uvc_000X-450px.jpg 450w, /img/lesson_plans/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
