--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Decentering Britishness</h2>
-          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market with sellers seated before baskets, and many individuals in white clothing milling about." title="Jubilee Market, Kingston, Jamaica. c. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/>
+          	<img style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market with sellers seated before baskets, and many individuals in white clothing milling about." title="Jubilee Market, Kingston, Jamaica. c. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
