--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="values">
 					<div class="aspect-ratio-box">
 						<h2 id="values">Bibliography</h2>
-          	<img loading="" src="/img/about/uvc_0022-1050px.jpg" srcset="/img/about/uvc_0022-1050px.jpg 1050w, /img/about/uvc_0022-900px.jpg 900w, /img/about/uvc_0022-750px.jpg 750w, /img/about/uvc_0022-600px.jpg 600w, /img/about/uvc_0022-450px.jpg 450w, /img/about/uvc_0022-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/>
+          	<img src="/img/about/uvc_0022-1050px.jpg" srcset="/img/about/uvc_0022-1050px.jpg 1050w, /img/about/uvc_0022-900px.jpg 900w, /img/about/uvc_0022-750px.jpg 750w, /img/about/uvc_0022-600px.jpg 600w, /img/about/uvc_0022-450px.jpg 450w, /img/about/uvc_0022-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
