--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="contributors">
 					<div class="aspect-ratio-box">
 						<h2 id="contributors">Project Contributors</h2>
-          	<img loading="" src="/img/about/uvc_0023-900px.jpg" srcset="/img/about/uvc_0023-900px.jpg 900w, /img/about/uvc_0023-750px.jpg 750w, /img/about/uvc_0023-600px.jpg 600w, /img/about/uvc_0023-450px.jpg 450w, /img/about/uvc_0023-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Complex flower array with red, blue, white, pink, purple, and yellow flowers." title="Jones, Owen. “Indian No. 4.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LII, https://archive.org/details/grammarornament00Jone. Public domain."/>
+          	<img src="/img/about/uvc_0023-900px.jpg" srcset="/img/about/uvc_0023-900px.jpg 900w, /img/about/uvc_0023-750px.jpg 750w, /img/about/uvc_0023-600px.jpg 600w, /img/about/uvc_0023-450px.jpg 450w, /img/about/uvc_0023-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Complex flower array with red, blue, white, pink, purple, and yellow flowers." title="Jones, Owen. “Indian No. 4.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LII, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
