--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
 					</ul>
 				</section>
 
-				<section class="participate">
+				<aside class="participate">
 					<p>Follow us, join our mailing list, or contribute to the project.</p>
 					<div>
 						<a class="follow" href="https://twitter.com/intent/user?screen_name=UndiscVC"><i class="fab fa-twitter fa-fw" aria-hidden="true" title="Twitter"></i> Follow Us!</a>
 
 						<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Mailing List / Get Involved</a>
 					</div>
-				</section>
+				</aside>
 
 				<section class="smaller" aria-labelledby="site-code">
 					<h2 id="site-code">Site Code</h2>
