--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -112,7 +112,7 @@
 
             <section aria-labelledby="pathway-1">
               <h4 id="pathway-1">Postcolonial Positions</h4>
-              <p><strong>Recommended Texts (full references below):</strong> Gikandi 1997; Hall 2002; Longfellow 1883; Poon 2007; Punch Magazine (1856) n.d.; Salih 2010; Seacole (1857) 2005</p>
+              <p><strong>Recommended Texts (full references below):</strong> Gikandi 1997; Hall 2002; Longfellow 1883; Poon 2007; Punch Magazine (1856) 2016; Salih 2010; Seacole (1857) 2005</p>
             
               <p><strong>Summary:</strong> In placing an emphasis on reading <em>Wonderful Adventures</em> through the lens of postcolonial studies, this grouping could serve as an introduction to students unfamiliar with the commitments and concepts of postcolonial critique, while providing them with a vocabulary to discuss Seacole’s self-representation and her representation by others as a nineteenth-century Jamaican and British woman of color. This grouping includes:</p>
 							
@@ -160,7 +160,7 @@
 
 							<p>Longfellow, Henry Wadsworth. 1883. “Saint Filomena.” In <em>The Complete Poetical Works of Henry Wadsworth Longfellow</em>, 173–74. Cambridge: Riverside Press.</p>
 
-							<p>Punch Magazine. (1856) n.d. “<a href="https://www.victorianlondon.org/people/seacole.htm">A Stir for Seacole</a>.” In <em>The Dictionary of Victorian London</em>.</p>
+							<p>Punch Magazine. (1856) 2016 “<a href="https://www.victorianlondon.org/people/seacole.htm">A Stir for Seacole</a>.” In <em>The Dictionary of Victorian London</em>.</p>
 
 							<p>Seacole, Mary. (1857) 2005. <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Edited by Sarah Salih. New York City: Penguin Books.</p>
             </section>
