divers corrs html

--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -133,7 +133,7 @@
 								</span>
 							</p>
 							
-							<p>Pringle, Thomas. <a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&amp;gbpv=1&amp;printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. New ed., Tegg, 1851.<br/>
+							<p>Pringle, Thomas. <a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&amp;gbpv=1&amp;printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Tegg, 1851.<br/>
 								<span class="annotation">In this text, the Scottish poet and abolitionist writes about his years spent in South Africa. The perspective is Evangelical and sympathetic. At the beginning of the book, he calmly observes his “journey through the wilderness of jungle,” noting the aesthetic qualities of the landscape: “[t]he scenery through which we passed was in many places of the most picturesque and singular description” (9, 11). Pringle’s description of natives and animals (43–55) may read like an objective, distanced taxonomy that translates the unknown into graspable, Western knowledge. But might it be read otherwise? Indeed, one could interpret Pringle’s exposure to the broad spectrum of species and native tribes in South Africa – an exposure that challenges his restrictive residence in Europe – as him extending his self-awareness to the planetary scale, as he embraces his relationality across the globe.</span>
 							</p>
 							
