--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -102,7 +102,7 @@
 
 							<p class="small">* <em>Note: Items listed in chronological order in this section.</em></p>
 
-							<p>African Civilization Society. <a href="https://www.blackpast.org/african-american-history/constitution-african-civilization-society-1796/"><em>(1858)  Constitution of the African Civilization Society</em></a>. Blackpast, 2009.<br/>
+							<p>African Civilization Society. “<a href="https://www.blackpast.org/african-american-history/constitution-african-civilization-society-1796/">(1858)  Constitution of the African Civilization Society</a>.” Blackpast, 2009.<br/>
 								<span class="annotation">The African Civilization Society was founded by Henry Highland Garnet, an American abolitionist, minister, and former enslaved person, who encouraged Black Americans to emigrate to Africa.</span></p>
 
 							<p>Booth, Joseph. <a href="http://babel.hathitrust.org/cgi/pt?id=ien.35556012349940&view=1up&seq=3"><em>Africa for the African</em></a>. n.p., 1897.<br/>
