--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -137,7 +137,7 @@
 								<span class="annotation">This article provides an analysis and discussion of laws and practices of intimacy among enslaved people in the U.S.</span>
 							</p>
 
-							<p>Hartman, Saidiya. <em>Scenes of Subjection: Terror, Slavery, and Self-Making in Nineteenth-Century America</em>. Oxford University Press, 1997.<br/>
+							<p>Hartman, Saidiya V. <em>Scenes of Subjection: Terror, Slavery, and Self-Making in Nineteenth-Century America</em>. Oxford University Press, 1997.<br/>
 								<span class="annotation">This book analyzes agency and the production of subjectivity among enslaved people in dialogue with Foucault’s thinking about power and the subject.</span>
 							</p>
 							
