--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -236,7 +236,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Captions</h3>
 
-						<p>(Left) Maull & Company. <a href="https://upload.wikimedia.org/wikipedia/commons/3/3b/Seacole_photo.jpg"><em>Mary Seacole</em></a>. Wikimedia Commons, 1873. Public domain. Jennings, Martin, and Owen Blacker. One of the only known photographs of Mary Seacole, the staging of this image offers a glimpse of how Seacole’s medical knowledge and care work were presented and perceived within her lifetime. </p>
+						<p>(Left) Maull & Company. <a href="https://upload.wikimedia.org/wikipedia/commons/3/3b/Seacole_photo.jpg">Mary Seacole</a>. Wikimedia Commons, 1873. Public domain. Jennings, Martin, and Owen Blacker. One of the only known photographs of Mary Seacole, the staging of this image offers a glimpse of how Seacole’s medical knowledge and care work were presented and perceived within her lifetime. </p>
 							
 						<p>(Right) Jennings, Martin, and Owen Blacker. <a href="https://upload.wikimedia.org/wikipedia/commons/f/fe/Mary_Seacole_statue%2C_St_Thomas%27_Hospital%2C_front_view.jpg"><em>Mary Seacole</em></a>. Wikimedia Commons, 2016. <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Creative Commons CC0 1.0 Universal Public Domain Dedication</a>. This memorial statue of Mary Seacole stands outside of St. Thomas’ Hospital in London, opposite the Houses of Parliament. Its commissioning and placement was the culmination of a twelve-year campaign to raise funds and awareness of Seacole’s legacy. However, the statue was the subject of much debate and vocal opposition, highlighting the continued discourse concerning Seacole’s significance as a historical figure and her legacy in the history of medicine. 
 						</p>
