--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 					<h2 id="image-details">Carousel Image Details</h2>
 
 						<!-- <h3>Slideshow</h3> -->
-						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
+						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
 						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
 						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. <a href="https://archive.org/details/cu31924029909060/page/n135/mode/2up">Hunting Scene</a>. Australian Legendary Tales, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
 						
-						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>,” c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
+						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. <a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 				</section>
 
 				<section class="smaller" aria-labelledby="citation">
