--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<!-- <h3>Slideshow</h3> -->
 						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103"><em>Durga Killing the Demon Mahisha</em></a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
-						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
+						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
 						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. <a href="https://archive.org/details/cu31924029909060/page/n135/mode/2up">Hunting Scene</a>. Australian Legendary Tales, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
 						
