--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -110,13 +110,13 @@
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Thomas Pringle</h4>
 
-							<p>“<a href="https://archive.org/details/poeticalworksoft00prin/page/10/mode/2up">Song of the Wild Bushman</a>.” 1825. <em>The Poetical Works of Thomas Pringle</em>, by Thomas Pringle, Edward Moxon, 1839, pp. 11–12.<br/>
+							<p>“<a href="https://archive.org/details/poeticalworksoft00prin/page/10/mode/2up">Song of the Wild Bushman</a>.” 1825. <em>The Poetical Works of Thomas Pringle</em>, Edward Moxon, 1839, pp. 11–12.<br/>
 
-							“<a href="https://archive.org/details/poeticalworksoft00prin/page/12/mode/2up">The Kosa</a>.” 1828. <em>The Poetical Works of Thomas Pringle</em>, by Thomas Pringle, Edward Moxon, 1839, pp. 13–15.<br/>
+							“<a href="https://archive.org/details/poeticalworksoft00prin/page/12/mode/2up">The Kosa</a>.” 1828. <em>The Poetical Works of Thomas Pringle</em>, Edward Moxon, 1839, pp. 13–15.<br/>
 
-							“<a href="https://archive.org/details/poeticalworksoft00prin/page/58/mode/2up">The Slave Dealer</a>.” 1828. <em>The Poetical Works of Thomas Pringle</em>, by Thomas Pringle, Edward Moxon, 1839, pp. 58–59.<br/>
+							“<a href="https://archive.org/details/poeticalworksoft00prin/page/58/mode/2up">The Slave Dealer</a>.” 1828. <em>The Poetical Works of Thomas Pringle</em>, Edward Moxon, 1839, pp. 58–59.<br/>
 
-							“<a href="https://archive.org/details/poeticalworksoft00prin/page/n165/mode/2up">The Bechuana Boy</a>.” 1830. <em>The Poetical Works of Thomas Pringle</em>, by Thomas Pringle, Edward Moxon, 1839, pp. 3–8.<br/>
+							“<a href="https://archive.org/details/poeticalworksoft00prin/page/n165/mode/2up">The Bechuana Boy</a>.” 1830. <em>The Poetical Works of Thomas Pringle</em>, Edward Moxon, 1839, pp. 3–8.<br/>
 
 
 								<span class="annotation">One of the original 1820 Cape Colony settlers, Pringle became an influential publisher before returning to Britain because of censorship disputes with the local administration. He was a prominent abolitionist and the editor of <em>The History of Mary Prince</em> (1831), the first slave narrative by a Black woman published in Britain. In addition to writing poetry that was overtly anti-slavery (as in “The Slave Dealer” and “The Bechuana Boy”), Pringle also wrote poetry describing Africans on their native lands (“Song of the Wild Bushman” and “The Kosa”).</span>
