--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -95,7 +95,7 @@
 					<section aria-labelledby="primary">
 						<h3 id="primary">Primary Materials</h3>
 
-						<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html"><em>A Negro’s Complaint</em></a>.” British Library Board, T.1271(1).</p>
+						<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html"><em>A Negro’s Complaint</em></a>. British Library Board, T.1271(1).</p>
 
 						<p><a href="https://peterpappas.com/docs/lesson9/9-17.htm"><em>A Tread-Mill Scene in Jamaica</em></a>. 1837. Library of Congress Prints and Photographs Division.</p>
 						
