--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -172,7 +172,7 @@
 							<section aria-labelledby="secondary-2">
 								<h5 id="secondary-2">Secondary Texts</h5>
 
-								<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html"><em>A Negro’s Complaint</em></a>.” British Library Board, T.1271(1).</p>
+								<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html"><em>A Negro’s Complaint</em></a>. British Library Board, T.1271(1).</p>
 
 								<p>Hack, Daniel. <em>The African Americanization of Victorian Literature</em>. Princeton University Press, 2019.</p>
 
