--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -65,7 +65,7 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="menu">Menu</h3>
             <ol class="menu">
-							<li><a href="#digital">Digital Projects and Publications</a></li>
+							<li><a href="#digital">Digital Projects and Collections</a></li>
 							<li><a href="#primary">Primary Materials</a></li>
 							<li><a href="#secondary">Secondary Materials</a></li>
 							<li><a href="#illustrations">Site Illustrations</a></li>
@@ -75,7 +75,7 @@
           </section>
 
 					<section aria-labelledby="digital">
-						<h3 id="digital">Digital Projects and Publications</h3>
+						<h3 id="digital">Digital Projects and Collections</h3>
 
 						<p><a href="https://dloc.com/"><em>Digital Library of the Caribbean (DLOC)</em></a>. Digital Library of the Caribbean, n.d.</p>
 
