--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -72,10 +72,10 @@
 					<h2 id="seacole-2">Mary Seacole and the Caribbean #2</h2>
 					<ul>
 						<li>Lesson Plans</li>
-						<li><a href="/html/lesson_plans/seacole_decentering_britishness.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
-						<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining Victorian Autobiography</a></li>
-						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
-						<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
+						<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
+						<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a></li>
+						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a></li>
+						<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
 					</ul>
 				</section>
 
@@ -83,12 +83,12 @@
 					<h2 id="africa-2">Africa, Diaspora, and the British Empire #2</h2>
 					<ul>
 						<li>Lesson Plans</li>
-						<li><a href="/html/lesson_plans/africa_dramatic_monologue.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
-						<li><a href="/html/lesson_plans/africa_colonial_landscapes.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
-						<li><a href="/html/lesson_plans/africa_southern_africa.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1820-1930</a></li>
-						<li><a href="/html/lesson_plans/africa_ethiopianism.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
-						<li><a href="/html/lesson_plans/africa_archival_erasure.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Archival Erasure and the Aftermath of Slavery</a></li>
-						<li><a href="/html/lesson_plans/africa_slavery_theories.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Theories of Sexuality, Desire, and Family</a></li>
+						<li><a href="/html/lesson_plans/africa_dramatic_monologue.html">Undisciplining the Dramatic Monologue</a></li>
+						<li><a href="/html/lesson_plans/africa_colonial_landscapes.html">Colonial Landscapes and Travel Narratives</a></li>
+						<li><a href="/html/lesson_plans/africa_southern_africa.html">Southern Africa, 1820-1930</a></li>
+						<li><a href="/html/lesson_plans/africa_ethiopianism.html">Ethiopianism</a></li>
+						<li><a href="/html/lesson_plans/africa_archival_erasure.html">Archival Erasure and the Aftermath of Slavery</a></li>
+						<li><a href="/html/lesson_plans/africa_slavery_theories.html">Slavery and Theories of Sexuality, Desire, and Family</a></li>
 					</ul>
 				</section>
 
