--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -122,7 +122,7 @@
 								<span class="annotation">One of the original 1820 Cape Colony settlers, Pringle became an influential publisher before returning to Britain because of censorship disputes with the local administration. He was a prominent abolitionist and the editor of <em>The History of Mary Prince</em> (1831), the first slave narrative by a Black woman published in Britain. In addition to writing poetry that was overtly anti-slavery (as in “The Slave Dealer” and “The Bechuana Boy”), Pringle also wrote poetry describing Africans on their native lands (“Song of the Wild Bushman” and “The Kosa”).</span>
 							</p>
 
-							<p><a href="https://archive.org/details/narrativearesid00condgoog/page/n6/mode/2up"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Tegg, 1851.<br/>
+							<p><a href="https://archive.org/details/narrativearesid00condgoog/page/n6/mode/2up"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Edward Moxon, 1835.<br/>
 								<span class="annotation">Pringle’s first-hand account offers insight into settler colonial life.</span>
 							</p>
             </section>
