update slavery theory

--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -127,7 +127,7 @@
 								<span class="annotation"><em>Clotel, or the President’s Daughter</em> tells the story of three generations of a family whose mixed-race matriarch, Currer, was Jefferson’s enslaved “mistress.” Upon the death of their father, the fair-skinned Clotel and her sister Althesa are sold, as is their mother. Both sisters live as if married to white men who purchase them, but when they are each in different ways abandoned by their white “husbands,” their legal status leaves them and their children unprotected from the cruel realities of slavery.</span>
 							</p>
 
-							<p>Foucault, Michel<em>The History of Sexuality, Volume I: An Introduction</em>. Translated by Robert Hurley, Vintage, 1990.</p>
+							<p>Foucault, Michel. <em>The History of Sexuality, Volume I: An Introduction</em>. Translated by Robert Hurley, Vintage, 1990.</p>
             </section>
 
 						<section aria-labelledby="materials-2">
