--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -174,7 +174,7 @@
             <section aria-labelledby="materials-3">
               <h4 id="materials-3">Historical/Cultural Contexts</h4>
 
-							<p>Fleming, Amy. 2016. “<a href="https://www.theguardian.com/artanddesign/2016/jun/21/sculptor-defends-his-mary-seacole-statue-if-she-was-white-would-there-be-this-resistance">Sculptor Defends His Mary Seacole Statue: ‘If She Was White, Would There Be This Resistance?’</a>” <em>The Guardian</em>, June 21, 2016.</p>
+							<p>Fleming, Amy. 2016. “<a href="https://www.theguardian.com/artanddesign/2016/jun/21/sculptor-defends-his-mary-seacole-statue-if-she-was-white-would-there-be-this-resistance">Sculptor Defends His Mary Seacole Statue: ‘If She Was White, Would There Be This Resistance?’</a>” <em>The Guardian</em>, 21 June 2016.</p>
 							
 							<p>Hall, Catherine. 2002. “Carlyle’s Occasion.” In <em>Civilising Subjects: Metropole and Colony in the English Imagination 1830-1867</em>, 347–63. Chicago: University of Chicago Press. <em>This text quotes racist language from the nineteenth century that will require discussion in advance.</em></p>
 							
