--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -172,11 +172,11 @@
 							<section aria-labelledby="secondary-2">
 								<h5 id="secondary-2">Secondary Texts</h5>
 
-								<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html"><em>A Negro’s Complaint</em></a>. British Library Board, T.1271(1).</p>
-
 								<p>Hack, Daniel. <em>The African Americanization of Victorian Literature</em>. Princeton University Press, 2019.</p>
 
 								<p>Hartman, Saidiya V. “Innocent Amusements: The Stage of Sufferance.” <em>Scenes of Subjection: Terror, Slavery, and Self-Making in Nineteenth-Century America</em>, Oxford University Press, 1997, pp. 17–48.</p>
+
+								<p><a href="https://www.bl.uk/learning/histcitizen/campaignforabolition/sources/antislavery/aspoem/negroscomplaint.html">Illustrated Scenes</a>. <em>The Negro’s Complaint: A Poem</em>, by William Cowper, Harvey & Darton, 1826, p. 22. British Library Board, T.1271(1).</p>
 
 								<p>Prince, Mary. <em><a href="https://docsouth.unc.edu/neh/prince/prince.html">The History of Mary Prince, a West Indian Slave. Related by Herself. With a Supplement by the Editor. To Which Is Added, the Narrative of Asa-Asa, a Captured African</a></em>. 1831. <em>Documenting the American South</em>. 2000</p>
 
