--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -78,7 +78,7 @@
 					<section aria-labelledby="mission">
 						<h3 id="mission">Our Mission</h3>
 
-						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
+						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black, African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
 
 						<ol class="mission">
 							<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
