--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 					<p>We bring together a diverse set of individuals – permanent faculty, contingent staff, independent scholars, students – through an intentional collaboration based on radical care that responds to the renewed call for racial and social justice.</p>
 
-					<p>Our project advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
+					<p>Our project advocates for engaging scholarship from Black, African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
 						
 					<p class="center italic">Read our <a href="/html/about/values_practices.html">mission statement</a> to learn more about our work.</p>
 				</section>
