--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				</section>
 
 				<section class="smaller" aria-labelledby="citation">
-					<h2 id="citation">Page Citation (MLA)</h2>
+					<h2 id="citation">Project/Page Citation (MLA)</h2>
 					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
 			</main>
