--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</ul>
 				</section>
 
-				<section class="founders" aria-labelledby="founders">
+				<section class="founding-dev" aria-labelledby="founders">
 					<h2 id="founders">Founding Developers</h2>
 					<ul>
 						<li><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)</li>
