--- a/html/zoomcasts/walters.html
+++ b/html/zoomcasts/walters.html
@@ -55,7 +55,7 @@
 					<h2 id="zoomcast">Zoomcast with Alisha Walters</h2>
 
 					<div class="wrapper" aria-labelledby="walters">
-						<div id="walters" class="youtube" tabindex="0" data-embed="" data-title="" data-id="" data-alt="Head and shoulders image of Alisha Walters">
+						<div id="walters" class="youtube" tabindex="0" data-embed="3032kYQFdjk" data-title="Alisha Walters" data-id="walters" data-alt="Head and shoulders image of Alisha Walters">
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
@@ -67,8 +67,8 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Alisha Walters (guest), Pearl Chaozon Bauer  (host)</p>
-							<p><strong>Length: 30:03</strong> </p>
-							<p><strong>Zoomcast Date: April 2, 2021</strong> </p>
+							<p><strong>Length:</strong> 30:03</p>
+							<p><strong>Zoomcast Date:</strong> April 2, 2021</p>
 							<p><strong>Zoomcast Series:</strong> Positionality</p>
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-04-02-Walters-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-04-02-Walters-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 						</div>
