--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,22 +58,10 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
-				<section aria-labelledby="positionality-1">
-					<h2 id="positionality-1">Positionality #1</h2>
-					<div><a href="/html/zoomcasts/lootens.html"><img loading="lazy" src="/img/zoomcasts/lootens-930px.jpg" srcset="/img/zoomcasts/lootens-1275px.jpg 1275w, /img/zoomcasts/lootens-930px.jpg 930w, /img/zoomcasts/lootens-816px.jpg 816w, /img/zoomcasts/lootens-663px.jpg 663w, /img/zoomcasts/lootens-532px.jpg 532w, /img/zoomcasts/lootens-465px.jpg 465w, /img/zoomcasts/lootens-408px.jpg 408w, /img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
-					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
-				</section>
-
-				<section aria-labelledby="literary-1">
-					<h2 id="literary-1">Beyond the Literary #1</h2>
-					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
-					<p>Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
-				</section>
-
-				<section aria-labelledby="positionality-2">
-					<h2 id="positionality-2">Positionality #2</h2>
-					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
-					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
+				<section aria-labelledby="positionality-3">
+					<h2 id="positionality-3">Positionality #3</h2>
+					<div><a href="/html/zoomcasts/walters.html"><img loading="lazy" src="/img/zoomcasts/walters-930px.jpg" srcset="/img/zoomcasts/walters-1275px.jpg 1275w, /img/zoomcasts/walters-930px.jpg 930w, /img/zoomcasts/walters-816px.jpg 816w, /img/zoomcasts/walters-663px.jpg 663w, /img/zoomcasts/walters-532px.jpg 532w, /img/zoomcasts/walters-465px.jpg 465w, /img/zoomcasts/walters-408px.jpg 408w, /img/zoomcasts/walters-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Alisha Walters" title="Alisha Walters"/><span>Alisha Walters</span></a></div>
+					<p>Alisha Walters and Pearl Chaozon Bauer discuss the necessity of re-training as Victorianists so as to support student needs and the field’s survival.</p>
 				</section>
 
 				<section aria-labelledby="literary-2">
@@ -82,6 +70,23 @@
 					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan D. Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
+				<section aria-labelledby="positionality-2">
+					<h2 id="positionality-2">Positionality #2</h2>
+					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
+					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
+				</section>
+
+				<section aria-labelledby="literary-1">
+					<h2 id="literary-1">Beyond the Literary #1</h2>
+					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy" title="Jason Rudy"/><span>Jason Rudy</span></a></div>
+					<p>Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
+				</section>
+
+				<section aria-labelledby="positionality-1">
+					<h2 id="positionality-1">Positionality #1</h2>
+					<div><a href="/html/zoomcasts/lootens.html"><img loading="lazy" src="/img/zoomcasts/lootens-930px.jpg" srcset="/img/zoomcasts/lootens-1275px.jpg 1275w, /img/zoomcasts/lootens-930px.jpg 930w, /img/zoomcasts/lootens-816px.jpg 816w, /img/zoomcasts/lootens-663px.jpg 663w, /img/zoomcasts/lootens-532px.jpg 532w, /img/zoomcasts/lootens-465px.jpg 465w, /img/zoomcasts/lootens-408px.jpg 408w, /img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
+					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
+				</section>
 			</main>
 			
 			<div data-include="footer"></div>
