--- a/html/zoomcasts/walters.html
+++ b/html/zoomcasts/walters.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Zoomcast with Alisha Walters | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Pearl Chaozon Bauer and Alisha Walters discuss the necessity of re-training as Victorianists so as to support student needs and the field’s survival."/>
+		<meta name="description" content="Alisha Walters and Pearl Chaozon Bauer discuss the necessity of re-training as Victorianists so as to support student needs and the field’s survival."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
