--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -83,6 +83,7 @@
 							<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 							<li><strong>Breanna Simpson</strong> (York University)</li>
 							<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
+							<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
 						</ul>
 					</section>
 
